# info-in-out-genai-claude

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_claude_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_search_results/: LLM_as_compressor_kolmogorov_complexity_text_generation_20260322_115139.jsonl  information_content_compression_ratio_input_output_generative_AI_LLM_20260322_114732.jsonl  language_model_information_theory_entropy_generation_complexity_20260322_114825.jsonl
papers/: README.md
papers/pages/: deletang2024_language_modeling_is_compression_manifest.txt  gilbert2023_semantic_compression_llms_manifest.txt  huang2024_ranking_llms_by_compression_manifest.txt  jiang2023_gzip_text_classification_manifest.txt  schwarzschild2024_adversarial_compression_memorization_manifest.txt  (+2 more)
results/: corrected_statistics.json  experiment1_complexity.json  experiment2_gibberish.json  experiment3_human_vs_gpt.json  experiment4_logprobs.json  statistics_summary.json
src/: analysis.py  experiments.py
