[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.29.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
